# cpp_sqlite_template

./: .gitignore  CMakeLists.txt  README.md
libs/sqlite/: CMakeLists.txt
src/: main.cpp
